fullSandbox11072023/force-app/main/default/objects/National_Pool_Set__c/National_Pool_Set__c.object-meta.xml
<CustomObject>
    <label>National Pool Set</label>
    <nameField>
        <label>National Pool Set Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>National Pool Sets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>