fullSandbox11072023/force-app/main/default/objects/National_Pool_Set__c/fields/Current_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Current_Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current Assignment</label>
    <referenceTo>User</referenceTo>
    <relationshipName>National_Pool_Sets</relationshipName>
    <type>Lookup</type>
</CustomField>