fullSandbox11072023/force-app/main/default/objects/National_Pool_Set__c/fields/Lot_Number__c.field-meta.xml
<CustomField>
    <fullName>Lot_Number__c</fullName>
    <label>Lot Number</label>
    <length>64</length>
    <type>Text</type>
</CustomField>