fullSandbox11072023/force-app/main/default/objects/National_Pool_Set__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Available</fullName>
                <default>true</default>
                <label>Available</label>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Out on Lease</fullName>
            </value>
            <value>
                <fullName>Pending Return</fullName>
            </value>
            <value>
                <fullName>Retired/Missing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>