fullSandbox11072023/force-app/main/default/objects/National_Pool_Set__c/listViews/All_Admin.listView-meta.xml
<ListView>
    <fullName>All_Admin</fullName>
    <columns>Set_Code__c</columns>
    <columns>Lot_Number__c</columns>
    <columns>Current_Assignment__c</columns>
    <columns>Description__c</columns>
    <columns>Status__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All (Admin)</label>
    <language>en_US</language>
</ListView>